# StreamJSME

./: .gitignore  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: pypi-publish.yml
StreamJSME/: __init__.py  _version.py  app.py
StreamJSME/frontend/: .env  index.html  package-lock.json  package.json
StreamJSME/frontend/public/: index.html
StreamJSME/frontend/src/: App.js
frontend/: package.json
frontend/src/: App.tsx  index.tsx
src/StreamJSME/: __init__.py  app.py
streamlit_test/: requirements.txt  test_app.py
workflows/: pypi-publish.yml
