[build-system]
requires=[
	"setuptools>=61.0",
	"versioningit",
]
build-backend = "setuptools.build_meta"

[project.urls]
"Hompage" = "https://github.com/ale94mleon/StreamJSME"
"Discussions" = "https://github.com/ale94mleon/StreamJSME/discussions"
"Documentation" = "https://github.com/ale94mleon/StreamJSME"
"Issues" = "https://github.com/ale94mleon/StreamJSME/issues"

[project]
name = "StreamJSME"
dynamic = ["version"]
description = "StreamJSME is a Streamlit component that use JSME to draw 2D molecules and use them on your Streamlit app"
readme = "README.rst"
license-files = ["LICENSE"]

authors=[
    {name="Alejandro Martínez León", email="ale94mleon@gmail.com"},
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry"
]
keywords = [
    "science",
    "chemistry",
    "biology",
    "drug-design"
]

requires-python = ">= 3.8"
dependencies = [
    "streamlit >= 0.63"
]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git" 
match = ["*"]
default-tag = "0.0.0"

[tool.versioningit.write]
file = "src/StreamJSME/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
StreamJSME = ["static/**"]