[metadata]
name = StreamJSME
version = attr: StreamJSME.__version__
author = Alejandro Martínez León
author_email = ale94mleon@gmail.com
description = StreamJSME is a Streamlit component that use JSME to draw 2D molecules and use them on your Streamlit app
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/ale94mleon/StreamJSME
project_urls =
    Discussions = https://github.com/ale94mleon/StreamJSME/discussions
    Documentation = https://StreamJSME.readthedocs.io/en/latest/
    Issues = https://github.com/ale94mleon/StreamJSME/issues
license = MIT
license_files = LICENSE
platforms = linux
classifiers =
    Development Status :: 2 - Pre-Alpha
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    science
    chemistry
    biology
    drug-design

[options]
packages = find:
package_dir =
    =.
python_requires = >= 3.8 , < 3.11
include_package_data = True
install_requires =
    streamlit >= 0.63


# [options.packages.find]
# where = src
# include = pkg*
# # alternatively: `exclude = additional*`